--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -75,7 +75,7 @@
    margin-bottom: 10px;
  }
 
- .btn-chat{
+ /* .btn-chat{
     font-size: 17px;
    margin: 10px auto 0px;
     color: #fff;
@@ -87,4 +87,4 @@
     font-weight: bold;
     cursor: pointer;
     background-color: ForestGreen;
- }
+ } */
