--- a/src/components/EnterRoom/EnterRoom.css
+++ b/src/components/EnterRoom/EnterRoom.css
@@ -12,7 +12,7 @@
    margin-bottom: 10px;
 }
 
-.enter-room button{
+/* .enter-room button{
    font-size: 17px;
    color: white;
    width: 100%;
@@ -22,5 +22,5 @@
    cursor: pointer;
    border-radius: 10px;
    background-color: ForestGreen;
-}
+} */
 
